# c-cpp-utils

./: README.md
c/: CMakeLists.txt  README.md
c/cmake/: c-paranoic-debug-flags.cmake
c/tests/: CMakeLists.txt  macros_test.c
c/utils/: README.md  macros.h
cpp/: CMakeLists.txt  README.md
cpp/tests/: CMakeLists.txt  bit_flag_test.cpp  macros_test.cpp  type_helpers_test.cpp  type_sequence_test.cpp
cpp/utils/: README.md  bit_flag.h  macros.h  type_helpers.h  type_sequence.h
